Feat: Add option to ignore jira pages

--- a/options.html
+++ b/options.html
@@ -4,13 +4,13 @@
 	</head>
 	<body>
 		<h4>Jira</h4>
-
-		<label>Jira URL<br><input name="url" type="text"/></label><br>
+			<label>Jira URL<br><input name="url" type="text"/></label><br>
+			<label><input name="jira" type="checkbox" value="on"/> Enable on Jira pages</label><br>
 
 		<h4>Credentials</h4>
+			<label>Login<br><input name="login" type="text"/></label><br>
+			<label>Password<br><input name="password" type="password"/></label><br>
 
-		<label>Login<br><input name="login" type="text"/></label><br>
-		<label>Password<br><input name="password" type="password"/></label><br>
 		<script src="options.js"></script>
 	</body>
 </html>
